// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker demo -- datepicker 1`] = `
.c32 {
  position: relative;
}

.c34 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c34::-webkit-input-placeholder {
  color: #abb4c3;
}

.c34::-moz-placeholder {
  color: #abb4c3;
}

.c34:-ms-input-placeholder {
  color: #abb4c3;
}

.c34::placeholder {
  color: #abb4c3;
}

.fgVhnQ .c33 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  border-color: #d9d9d9;
}

.fgVhnQ .c33:hover {
  border-color: #4683e6;
  z-index: 1;
}

.fgVhnQ .c33 {
  margin: 0;
}

.c31 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c31 .c33 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c31 .c33:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c31 .style__HandlerUp-laNuFx,
.c31 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c31 .style__HandlerUp-laNuFx:hover,
.c31 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c31 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c31 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c31 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c31 .c33 {
  margin: 0;
}

.c31 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.ifLmWs .c33 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 20px;
  width: 20px;
}

.ifLmWs .c33:hover {
  border-color: #4683e6;
  z-index: 1;
}

.ifLmWs .c33 {
  margin: 0;
}

.dgrlSz .c33 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 32px;
  width: 32px;
}

.dgrlSz .c33:hover {
  border-color: #4683e6;
  z-index: 1;
}

.dgrlSz .c33 {
  margin: 0;
}

.c6 {
  position: relative;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  background: #FFF;
  font-size: inherit;
  outline: none;
  color: inherit;
  height: 28px;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 input:hover {
  border-color: #4683e6;
}

.c6 input:focus {
  border-color: #4683e6;
}

.c27 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c28 {
  display: inline-block;
  vertical-align: middle;
}

.c29 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c30 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.c35 {
  margin: 0 4px;
}

.gezltw .c26 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c25 {
  display: inline-block;
  vertical-align: middle;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c13 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c17 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c7 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c7:hover {
  border-color: #4683e6;
}

.c7 .c14 {
  width: 20px;
  height: 20px;
}

.c7 .c16 {
  left: 13px;
  height: 10px;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c8 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c7 .c14 {
  left: 49px;
}

.c7 .c16 {
  background: #9fecc0;
}

.c7 .c12 {
  display: none;
}

.c18 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c18:hover {
  border-color: #4683e6;
}

.c18 .c14 {
  width: 20px;
  height: 20px;
}

.c18 .c16 {
  left: 13px;
  height: 10px;
}

.c18 .c10,
.c18 .c12 {
  line-height: 16px;
}

.c18 .c10 {
  padding-right: 20px;
}

.c18 .c12 {
  padding-left: 20px;
}

.c18 .c10 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c23 {
  margin-right: 8px;
}

.c21 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c24 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c24 .c22 {
  color: #4074e1;
}

.c19 .c20,
.c19 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c19 .c20:last-child,
.c19 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c19 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c19 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c19 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        display.date.format
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c6"
        >
          <input
            value="YY-MM-DD"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        display.hour
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c13"
            >
              OFF
            </span>
            <span
              class="c14 c15"
            >
              <span
                class="c16 c17"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        display.minute
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c13"
            >
              OFF
            </span>
            <span
              class="c14 c15"
            >
              <span
                class="c16 c17"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        display.second
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c13"
            >
              OFF
            </span>
            <span
              class="c14 c15"
            >
              <span
                class="c16 c17"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c18"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c13"
            >
              OFF
            </span>
            <span
              class="c14 c15"
            >
              <span
                class="c16 c17"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c19"
        >
          <div
            class="c20 c21"
          >
            <i
              class="icon__circle c22 c23 "
            />
            sm
          </div>
          <div
            checked=""
            class="c20 c24"
          >
            <i
              class="icon__cbox-ed c22 c23 "
            />
            md
          </div>
          <div
            class="c20 c21"
          >
            <i
              class="icon__circle c22 c23 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c25"
    >
      <div
        class="c26 c27"
      >
        <span
          class="c28"
        >
          18-07-21
        </span>
        <i
          class="icon__calendar c29 "
          color="blue"
        />
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
        >
          <div
            class="c32"
          >
            <input
              autocomplete="off"
              class="c33 c34"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c35"
        >
          :
        </span>
        <div
          class="c31"
        >
          <div
            class="c32"
          >
            <input
              autocomplete="off"
              class="c33 c34"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c35"
        >
          :
        </span>
        <div
          class="c31"
        >
          <div
            class="c32"
          >
            <input
              autocomplete="off"
              class="c33 c34"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- datepicker-disabled 1`] = `
.c7 {
  position: relative;
}

.c9 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
  background: #f7f7f7;
}

.c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c9::-moz-placeholder {
  color: #abb4c3;
}

.c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c9::placeholder {
  color: #abb4c3;
}

.c13 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c13::-webkit-input-placeholder {
  color: #abb4c3;
}

.c13::-moz-placeholder {
  color: #abb4c3;
}

.c13:-ms-input-placeholder {
  color: #abb4c3;
}

.c13::placeholder {
  color: #abb4c3;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c6 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  border-color: #d9d9d9;
}

.c6 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx,
.c6 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c6 .style__HandlerUp-laNuFx:hover,
.c6 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c6 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c6 .c8 {
  margin: 0;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c12 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c12 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c12 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c12 .style__HandlerUp-laNuFx,
.c12 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c12 .style__HandlerUp-laNuFx:hover,
.c12 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c12 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c12 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c12 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c12 .c8 {
  margin: 0;
}

.c12 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  margin: 0 4px;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c11 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
          disabled=""
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              disabled=""
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
          disabled=""
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              disabled=""
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
          disabled=""
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              disabled=""
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c12"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c13"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c12"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c13"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c12"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c13"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- datepicker-display 1`] = `
.c7 {
  position: relative;
}

.c9 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c9::-moz-placeholder {
  color: #abb4c3;
}

.c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c9::placeholder {
  color: #abb4c3;
}

.fgVhnQ .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  border-color: #d9d9d9;
}

.fgVhnQ .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.fgVhnQ .c8 {
  margin: 0;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c6 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c6 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx,
.c6 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c6 .style__HandlerUp-laNuFx:hover,
.c6 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c6 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c6 .c8 {
  margin: 0;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  margin: 0 4px;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          18:07:21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- datepicker-rules 1`] = `
.c7 {
  position: relative;
}

.c9 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c9::-moz-placeholder {
  color: #abb4c3;
}

.c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c9::placeholder {
  color: #abb4c3;
}

.fgVhnQ .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  border-color: #d9d9d9;
}

.fgVhnQ .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.fgVhnQ .c8 {
  margin: 0;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c6 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c6 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx,
.c6 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c6 .style__HandlerUp-laNuFx:hover,
.c6 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c6 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c6 .c8 {
  margin: 0;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  margin: 0 4px;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- datepicker-size 1`] = `
.c7 {
  position: relative;
}

.c13 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c13::-webkit-input-placeholder {
  color: #abb4c3;
}

.c13::-moz-placeholder {
  color: #abb4c3;
}

.c13:-ms-input-placeholder {
  color: #abb4c3;
}

.c13::placeholder {
  color: #abb4c3;
}

.c9 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 20px;
  display: inline-block;
  vertical-align: middle;
}

.c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c9::-moz-placeholder {
  color: #abb4c3;
}

.c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c9::placeholder {
  color: #abb4c3;
}

.c16 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 32px;
  display: inline-block;
  vertical-align: middle;
}

.c16::-webkit-input-placeholder {
  color: #abb4c3;
}

.c16::-moz-placeholder {
  color: #abb4c3;
}

.c16:-ms-input-placeholder {
  color: #abb4c3;
}

.c16::placeholder {
  color: #abb4c3;
}

.fgVhnQ .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  border-color: #d9d9d9;
}

.fgVhnQ .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.fgVhnQ .c8 {
  margin: 0;
}

.c12 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c12 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c12 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c12 .style__HandlerUp-laNuFx,
.c12 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c12 .style__HandlerUp-laNuFx:hover,
.c12 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c12 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c12 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c12 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c12 .c8 {
  margin: 0;
}

.c12 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 22px;
  padding: 0;
  margin: 0;
}

.c6 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 20px;
  width: 20px;
}

.c6 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx,
.c6 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 22px;
  width: 22px;
  line-height: 20px;
}

.c6 .style__HandlerUp-laNuFx:hover,
.c6 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c6 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c6 .c8 {
  margin: 0;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c15 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 34px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 34px;
  padding: 0;
  margin: 0;
}

.c15 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 32px;
  width: 32px;
}

.c15 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c15 .style__HandlerUp-laNuFx,
.c15 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 34px;
  width: 34px;
  line-height: 32px;
}

.c15 .style__HandlerUp-laNuFx:hover,
.c15 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c15 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c15 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c15 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c15 .c8 {
  margin: 0;
}

.c15 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.c11 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  height: 22px;
  line-height: 20px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c14 {
  height: 34px;
  line-height: 32px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  margin: 0 4px;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c11"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c12"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c13"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c12"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c13"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c12"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c13"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c14"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c15"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c16"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c15"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c16"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c15"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c16"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- datepicker-uncontrolled 1`] = `
.c7 {
  position: relative;
}

.c9 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c9::-webkit-input-placeholder {
  color: #abb4c3;
}

.c9::-moz-placeholder {
  color: #abb4c3;
}

.c9:-ms-input-placeholder {
  color: #abb4c3;
}

.c9::placeholder {
  color: #abb4c3;
}

.fgVhnQ .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
  border-color: #d9d9d9;
}

.fgVhnQ .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.fgVhnQ .c8 {
  margin: 0;
}

.c6 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  padding: 0 28px;
  padding: 0;
  margin: 0;
}

.c6 .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 26px;
  width: 26px;
}

.c6 .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx,
.c6 .style__HandlerDown-gQSTYw {
  text-align: center;
  top: 0;
  height: 28px;
  width: 28px;
  line-height: 26px;
}

.c6 .style__HandlerUp-laNuFx:hover,
.c6 .style__HandlerDown-gQSTYw:hover {
  color: #4074e1;
  border-color: #4683e6;
  z-index: 1;
}

.c6 .style__HandlerUp-laNuFx {
  right: 0;
  border-width: 1px;
}

.c6 .style__HandlerDown-gQSTYw {
  left: 0;
  border-width: 1px;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 0;
}

.c6 .c8 {
  margin: 0;
}

.c6 .style__InputSuffix-gVIVlX {
  margin-left: 4px;
  margin-right: 0px;
}

.ifLmWs .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 20px;
  width: 20px;
}

.ifLmWs .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.ifLmWs .c8 {
  margin: 0;
}

.dgrlSz .c8 {
  text-align: center;
  border: 1px solid #c3cad9;
  margin: 0 4px;
  height: 32px;
  width: 32px;
}

.dgrlSz .c8:hover {
  border-color: #4683e6;
  z-index: 1;
}

.dgrlSz .c8 {
  margin: 0;
}

.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  margin-left: 8px;
  display: inline-block;
  vertical-align: middle;
}

.c10 {
  margin: 0 4px;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07-21
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="19"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="55"
            />
          </div>
        </div>
        <span
          class="c10"
        >
          :
        </span>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <input
              autocomplete="off"
              class="c8 c9"
              min="-9007199254740991"
              step="1"
              value="21"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- month 1`] = `
.c6 {
  position: relative;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c6 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  background: #FFF;
  font-size: inherit;
  outline: none;
  color: inherit;
  height: 28px;
}

.c6 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c6 input::-moz-placeholder {
  color: #abb4c3;
}

.c6 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c6 input::placeholder {
  color: #abb4c3;
}

.c6 input:hover {
  border-color: #4683e6;
}

.c6 input:focus {
  border-color: #4683e6;
}

.c26 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c27 {
  display: inline-block;
  vertical-align: middle;
}

.c28 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.gezltw .c25 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c24 {
  display: inline-block;
  vertical-align: middle;
}

.c9 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c11 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c13 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c15 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c17 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.lfPLEx .c14 {
  width: 20px;
  height: 20px;
}

.lfPLEx .c16 {
  left: 13px;
  height: 10px;
}

.lfPLEx .c10,
.lfPLEx .c12 {
  line-height: 16px;
}

.lfPLEx .c10 {
  padding-right: 20px;
}

.lfPLEx .c12 {
  padding-left: 20px;
}

.lfPLEx .c8 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.lfPLEx .c14 {
  left: 49px;
}

.lfPLEx .c16 {
  background: #9fecc0;
}

.lfPLEx .c12 {
  display: none;
}

.c7 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c7:hover {
  border-color: #4683e6;
}

.c7 .c14 {
  width: 20px;
  height: 20px;
}

.c7 .c16 {
  left: 13px;
  height: 10px;
}

.c7 .c10,
.c7 .c12 {
  line-height: 16px;
}

.c7 .c10 {
  padding-right: 20px;
}

.c7 .c12 {
  padding-left: 20px;
}

.c7 .c10 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c22 {
  margin-right: 8px;
}

.c20 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c23 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c23 .c21 {
  color: #4074e1;
}

.c18 .c19,
.c18 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c18 .c19:last-child,
.c18 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c18 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c18 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c18 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        display.date.format
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <span
          class="c6"
        >
          <input
            value="YY-MM"
          />
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            class="c8 c9"
          >
            <span
              class="c10 c11"
            >
              ON
            </span>
            <span
              class="c12 c13"
            >
              OFF
            </span>
            <span
              class="c14 c15"
            >
              <span
                class="c16 c17"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c18"
        >
          <div
            class="c19 c20"
          >
            <i
              class="icon__circle c21 c22 "
            />
            sm
          </div>
          <div
            checked=""
            class="c19 c23"
          >
            <i
              class="icon__cbox-ed c21 c22 "
            />
            md
          </div>
          <div
            class="c19 c20"
          >
            <i
              class="icon__circle c21 c22 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c24"
    >
      <div
        class="c25 c26"
      >
        <span
          class="c27"
        >
          18-07
        </span>
        <i
          class="icon__calendar c28 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- month-disabled 1`] = `
.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

.c0 .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c5 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c5"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- month-display 1`] = `
.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018---07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- month-rules 1`] = `
.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- month-size 1`] = `
.c5 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  height: 22px;
  line-height: 20px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  height: 34px;
  line-height: 32px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c5"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c6"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- month-uncontrolled 1`] = `
.c2 {
  height: 28px;
  line-height: 26px;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
}

.c4 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.gezltw .c1 {
  pointer-events: none;
  color: #bbb;
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3"
        >
          2018-07
        </span>
        <i
          class="icon__calendar c4 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range 1`] = `
.c26 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c26:hover {
  border: 1px solid #4683e6;
}

.c27 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c25 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c24 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c31 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c23 {
  margin-right: 8px;
}

.c28 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.kdRRdd .c30 {
  display: none;
}

.c29 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.lfPLEx .c19 {
  width: 20px;
  height: 20px;
}

.lfPLEx .c21 {
  left: 13px;
  height: 10px;
}

.lfPLEx .c15,
.lfPLEx .c17 {
  line-height: 16px;
}

.lfPLEx .c15 {
  padding-right: 20px;
}

.lfPLEx .c17 {
  padding-left: 20px;
}

.lfPLEx .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.lfPLEx .c19 {
  left: 49px;
}

.lfPLEx .c21 {
  background: #9fecc0;
}

.lfPLEx .c17 {
  display: none;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  left: 13px;
  height: 10px;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c10 {
  margin-right: 8px;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        type
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            date
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="icon__circle c9 c10 "
            />
            month
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c11"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        hideOptions
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c23 c24"
      >
        <div>
          <div
            class="c25 c26"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c27 "
            />
          </div>
        </div>
      </div>
      <div
        class="c28"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c29"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c30 c31 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-disabled 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  color: #bbb;
}

.c1 .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c8 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c7 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  background: #f7f7f7;
  border-color: #d9d9d9;
  color: #bbb;
}

.c9 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
        disabled=""
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
        disabled=""
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c8"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c9"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-display 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c7 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          18-07-21 07:55
        </span>
        <span
          class="c6"
        />
        <span>
          18-07-21 07:55
        </span>
        <i
          class="icon__calendar c7 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-hideOptions 1`] = `
.c6 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c6:hover {
  border: 1px solid #4683e6;
}

.c7 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c5 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c4 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c3 {
  margin-right: 8px;
}

.c0 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c1"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c2 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c3 c4"
      >
        <div>
          <div
            class="c5 c6"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c7 "
            />
          </div>
        </div>
      </div>
      <div
        class="c0"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c1"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c2 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-onInitialChange 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
  pointer-events: none;
  border: none;
  line-height: 28px;
}

.c5 .c7 {
  display: none;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              二小时后
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          Invalid date
        </span>
        <span
          class="c6"
        />
        <span>
          Invalid date
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-options 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.kdRRdd .c7 {
  display: none;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-rules 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.kdRRdd .c7 {
  display: none;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-size 1`] = `
.c9 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c9:hover {
  border: 1px solid #4683e6;
}

.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 22px;
  line-height: 22px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c11 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 34px;
  line-height: 34px;
}

.c11:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c10 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.kdRRdd .c7 {
  display: none;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 22px;
  line-height: 20px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c12 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 34px;
  line-height: 32px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c9"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c11"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c12"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-type 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.kdRRdd .c7 {
  display: none;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DatePicker demo -- range-uncontrolled 1`] = `
.c3 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  border: 1px solid #c3cad9;
  padding-right: 40px;
  box-sizing: border-box;
  height: 28px;
  line-height: 28px;
}

.c3:hover {
  border: 1px solid #4683e6;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.bsAoRV .c2 {
  background: #f7f7f7;
  border-color: #d9d9d9;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  color: #6b798e;
  background-color: #FFF;
  display: inline-block;
  vertical-align: middle;
}

.c8 {
  margin-left: 5px;
  display: inline-block;
  vertical-align: middle;
}

.c0 {
  margin-right: 8px;
}

.c5 {
  border: 1px solid #c3cad9;
  padding: 0 8px;
  border-radius: 2px;
  cursor: pointer;
  box-sizing: border-box;
  height: 28px;
  line-height: 26px;
  color: #6b798e;
  display: inline-block;
  vertical-align: middle;
}

.kdRRdd .c7 {
  display: none;
}

.c6 {
  margin: 0 4px;
  width: 12px;
  height: 1px;
  background: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

<div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div>
      <div
        class="c0 c1"
      >
        <div>
          <div
            class="c2 c3"
          >
            <div>
              自定义
            </div>
            <i
              class="icon__down c4 "
            />
          </div>
        </div>
      </div>
      <div
        class="c5"
      >
        <span>
          2018-07-21 19:55:21
        </span>
        <span
          class="c6"
        />
        <span>
          2018-07-21 19:55:21
        </span>
        <i
          class="icon__calendar c7 c8 "
          color="blue"
        />
      </div>
    </div>
  </div>
</div>
`;
